# mgr

./: .gitignore  CMakeLists.txt  README.md
beamer/: README  code.cpp  exampleen.tex  examplepl.nav  examplepl.tex  examplepl.vrb
cuda/: kernel.cpp
cuda_include/: kernel.cu  kernel.cuh
data/: iris.data  iris2.data
include/: functions_gpu.h  read_iris.h
src/: Makefile  algorithm.cpp  algorithm.cu  common.h  data.py  functions_gpu.cpp  plot.gp  read_iris.h
tex/: bibliografia.bib  cuda.cpp  cuda.tex  dodatekKlasteryzacja.tex  grad_clust_alg.tex  podsumowanie.tex  praca.tex  przedmowa.tex  strzeszczenie_quick.odt  wstep.tex  wyniki.tex
tex/code/: cpu.cpp  impl_cpu.cpp  impl_cuda.cpp
